refactor: 2 종류의 로또 구매를 buyLottos로 통합